<resources>
    <string name="app_name">Blaze!</string>
    <string name="blaze_logo">Blaze Logo</string>
    <string name="lets_go">Vamos lá!</string>
    <string name="welcome_title_pay_less">Pague Menos!</string>
    <string name="welcome_title_near_establishments">Estabelecimentos Próximos</string>
    <string name="welcome_title_useful_infos">Informações Úteis</string>
    <string name="welcome_title_favorite_offers">Ofertas Favoritas</string>
    <string name="welcome_desc_pay_less">Saiba das melhores ofertas, assuma o controle do seu dinheiro e economize em suas compras.</string>
    <string name="welcome_desc_near_establishments">Não importa por onde esteja, mostraremos a ti ofertas dos estabelecimentos mais próximos.</string>
    <string name="welcome_desc_useful_infos">Informe-se acerca da localização, dos horários de funcionamento e do contato do estabelecimento</string>
    <string name="welcome_desc_favorite_offers">Não perca as melhores ofertas de vista, salve elas para acessar quando quiser!</string>
    <string name="welcome">Seja bem-vindo(a)!</string>
    <string name="welcome_choose_access">Vamos iniciar nosso acesso à plataforma. A princípio, é sua primeira vez por aqui?</string>
    <string name="yes_im_new">Sim, sou novo por aqui!</string>
    <string name="no_im_already_a_user">Não, já sou usuário da plataforma!</string>
    <string name="proceed">Prosseguir</string>
    <string name="auth_welcome_message">Seja bem-vindo(a) à plataforma!</string>
    <string name="auth_login_btn">ACESSE</string>
    <string name="auth_signup_btn">REGISTRE-SE</string>
    <string-array name="auth_slider_titles">
        <item>Ofertas e Promoções</item>
        <item>Estabelecimentos</item>
        <item>Informações Úteis</item>
        <item>Comodidade e Eficiência</item>
    </string-array>
    <string-array name="auth_slider_subtitles">
        <item>Não perca os melhores preços postados pelos estabelecimentos participantes</item>
        <item>Tenha acesso às ofertas de mercados, drogarias, hortifrutis, dentre outros comércios</item>
        <item>Saiba da localização, dos horários de funcionamento e outros dados dos estabelecimentos participantes</item>
        <item>Nossa finalidade é trazer a experiência de consulta dos melhores preços sem sair de casa</item>
    </string-array>
</resources>