<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".view.welcome.WelcomeActivity">

    <include
        android:id="@+id/include"
        layout="@layout/logo_label_horizontal_grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView_tips"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:padding="12dp"
        android:requiresFadingEdge="vertical"
        android:fadeScrollbars="false"
        app:layout_constraintBottom_toTopOf="@+id/proceedButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/label_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:alpha="0"
                tools:alpha="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/catamaran_bold"
                    android:text="@string/welcome_title_pay_less"
                    android:textSize="16sp"
                    android:textColor="@android:color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/catamaran_bold"
                    android:text="@string/welcome_desc_pay_less"
                    android:textColor="@color/pale_blue" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/label_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:alpha="0"
                tools:alpha="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/catamaran_bold"
                    android:text="@string/welcome_title_near_establishments"
                    android:textSize="16sp"
                    android:textColor="@android:color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/catamaran_bold"
                    android:text="@string/welcome_desc_near_establishments"
                    android:textColor="@color/pale_blue" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/label_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:alpha="0"
                tools:alpha="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/catamaran_bold"
                    android:text="@string/welcome_title_useful_infos"
                    android:textSize="16sp"
                    android:textColor="@android:color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/catamaran_bold"
                    android:text="@string/welcome_desc_useful_infos"
                    android:textColor="@color/pale_blue" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/label_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:alpha="0"
                tools:alpha="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/catamaran_bold"
                    android:text="@string/welcome_title_favorite_offers"
                    android:textSize="16sp"
                    android:textColor="@android:color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/catamaran_bold"
                    android:text="@string/welcome_desc_favorite_offers"
                    android:textColor="@color/pale_blue" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/proceedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/button_welcome_background"
        android:text="@string/lets_go"
        android:textColor="@color/pale_blue"
        android:visibility="visible"
        android:alpha="0"
        tools:alpha="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>